fixed intro z-index click

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
     margin-left: -25rem;
     margin-top: -5rem;
     cursor: pointer;
+    z-index: 0;
 }
 
 .link-dot {
@@ -73,6 +74,7 @@ body {
 }
 
 #title {
+    position: relative;
     color: white;
     font-size: 3.4rem;
     text-transform: uppercase;
@@ -80,6 +82,7 @@ body {
     margin: 0;
     transition: all 1s;
     height: 100%;
+    z-index: 0;
 }
 
 #title-text {
@@ -104,7 +107,7 @@ body {
 }
 
 #link-0 {
-    color: white;
+    z-index: 1;
 }
 
 #content-box {
@@ -151,7 +154,7 @@ canvas {
     width: 100%;
 }
 
-@media (max-width: 950px) {
+@media (max-width: 1750px) {
     .link {
         font-size: 7rem;
     }
